Tweak data structures and corresponding api specs
